--- a/hero.css
+++ b/hero.css
@@ -6,7 +6,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background: #FFEB3B;
+    background: #CFD8DC;
 }
 
 
@@ -33,11 +33,13 @@ margin: 0 auto
     font-size: 200%;
 }
 
+
+
 .features{
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     color: #212121;
-}
-
+    text-align: center;
+]
