--- a/css/variables.css
+++ b/css/variables.css
@@ -20,8 +20,7 @@ div{
 .section__functionalities{
     display: flex;
     list-style-type: none;
-    justify-content: space-around; 
-    text-align: center;  
+    justify-content: space-around;     
     padding: 2rem;   
     align-items: center; 
 }
@@ -30,7 +29,7 @@ div{
     flex: 1 1 25%;
     margin: 0;
     color: #212121;  
-    font-size: 2rem;
+    
     text-align: center;
     align-items: center;
 }
@@ -44,4 +43,5 @@ div{
     li.ul__functionalities{
     flex: 1 1 25%;
     padding: 1rem;  
+}
 }
