--- a/css/variables.css
+++ b/css/variables.css
@@ -1,47 +1,92 @@
-*{
-    box-sizing: border-box;
-    margin: 0 auto;
-    padding: 0;
-    max-width: 1200px;
-}
 
-#functionalities{
-    background: #CFD8DC;
+body{
+    background: #BDBDBD;
+    font-family: sans-serif;
+    width: 1200px;
+    margin: 0px;
+    padding: 0px;
 }
-
-i{       
-    color: #757575;
-}
-
-div{
-    padding: 1rem;
-}
-
-.section__functionalities{
-    display: flex;
-    list-style-type: none;
-    justify-content: space-around;     
-    padding: 2rem;   
-    align-items: center; 
-}
-
-.ul__functionalities{
-    flex: 1 1 25%;
-    margin: 0;
-    color: #212121;  
+.navigation{
     
+    margin: 0; 
+    margin-top: 0;   
+    height: auto;
+    width: 100vw;
+    padding: 0px;
+    background:#757575;
+    display: flex;
+    flex-direction: column;
+    text-transform: uppercase;
     text-align: center;
-    align-items: center;
+    align-content: center;
+    color: #FFEB3B;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    
+}
+.navigation ul li{
+    margin: 0.7em 0px;
+    list-style: none;
+}
+.navigation > .logo{
+    align-self: center;
+    width: 6em;
+
+}
+.logo{
+    border: 3px black solid;
 }
 
-@media only screen and (max-width: 599px) {
-    .section__functionalities{
-        flex-direction: column;
-        text-align: center;
+ul {
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    padding-inline-start: 0px;
+}   
+a.nav{
+    text-decoration: none;
+    color: #FFEB3B;
+    text-transform: uppercase;
+    padding: 6px;
+    
+}
+
+a.nav:hover{
+    font-weight: bolder;
+}
+.menu:hover{
+    background: black;
+    padding: 1em;
+}
+@media screen and (min-width: 800px){
+
+    .navigation {
+        flex-direction: row;
+        justify-content: space-between;
+      
+        
     }
+   ul{
+       display: flex;
+       align-items: center;
+       padding-right: 10px;
+   }
+   .nav{
+       border: 2px solid #455A64;
+       background: black;
+       border-radius: 50px;
+       margin-right: 5px;
+   }
 
-    li.ul__functionalities{
-    flex: 1 1 25%;
-    padding: 1rem;  
+   .logo{
+       display: block;
+       align-self: center;
+       justify-self: flex-start;
+   }
+   .menu:hover{  
+    padding: 1.3em;
+    background: none;
 }
 }
+
