--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
-
+*{
+    box-sizing: border-box;
+    margin: 0 auto;
+    padding: 0;
+    max-width: 1200px;
+}
 body{
     background: #BDBDBD;
     font-family: sans-serif;
-    width: 1200px;
-    margin: 0px;
-    padding: 0px;
+
 }
 .navigation{
     
