--- a/hero.css
+++ b/hero.css
@@ -15,53 +15,308 @@ body {
     min-height: 270px;
     justify-content: center;
     color: #FFFFFF;
+    align-items: flex-start;
     
 }
 
 
 
 #hero img{
-    width: 90%;
-    height: 400px;
+    display: block;
+    max-width: 100%;
+    margin: 0 auto;
+    height: 0 auto;
 }
 
-.heroimage{
-display: block;
-max-width: 90%;
-margin: 0 auto
-}
 
-.img__text {
+
+.hero__header {
     position: absolute;
+    
+}
+
+
+.hero__top {
     align-self: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
+    color: #212121;
     font-size: 200%;
+    height: 100%;
+    width: 100%;
 }
 
 
-
-.features{
+ 
+.top__header1{
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    color: #212121;
+    align-self: center;
+    font-size: 100%;
+    height: 20%;
+    width: 40%;
+    margin-top: 10%;
+    background-color: rgba(146, 99, 13, 0.568);
+   border-radius: 10%;
     text-align: center;
+    display: inline-block;
 }
 
-.features p{
-    border-bottom: 1px solid black;
-}
 
-.features a {
-    text-decoration: none;
+
+
+
+.top__header2{
+    display: flex;
+    flex-direction: column;
+    width: 35%;
+    margin-top: 20%;
+    background-color: rgba(146, 99, 13, 0.568);
+    border-radius: 10%;
+    text-align: center;
+    }
+
+    .hero__bottom {
+
+    display: flex;
+    flex-direction: column;
+    font-size: 200%;
     color: #212121;
-}
+    height: 100%;
+    width: 100%;
+    }
 
-.features a:hover{
-    background-color: #757575;
-}
+    .bottom__header1{
+        display: flex;
+        flex-direction: column;
+        align-self: flex-end;
+        height: 20%;
+        width: 40%;
+        background-color: rgba(146, 99, 13, 0.568);
+        border-radius: 10%;
+        text-align: center;
+        }
 
+
+
+
+    .bottom__header2{
+        display: flex;
+        flex-direction: column;
+        width: 40%;
+        align-items: center;
+        margin-top: 15%;
+        font-size: 70%;
+        align-self: center;
+        color: #212121;
+    }
+
+    .bottom__header2 h1 a{
+        text-decoration: none;
+        color: #212121;
+    }
+
+    .bottom__header2 h1 a:hover{
+        color: #030303b2;
+        background: #7575758a; 
+    }
+
+
+
+    @media all and (min-width: 1311px) and (max-width: 1461px){
+        .bottom__header2{
+            
+            margin-top: 5%;
+        }
+    }
+
+ @media all and (min-width: 709px) and (max-width: 1310px){
+
+    .hero__header {
+        position: absolute;
+        
+    }
+    
+    
+    .hero__top {
+        align-self: center;
+        display: flex;
+        flex-direction: column;
+        font-size: 150%;
+        color: #212121;
+        height: 100%;
+        width: 100%;
+    }
+    
+    
+     
+    .top__header1{
+        display: flex;
+        font-size: 0,5em;
+        height: 20%;
+        width: 33%;
+        background-color: rgba(146, 99, 13, 0.568);
+       border-radius: 10%;
+       display: inline-block;
+        text-align: center;
+        
+    }
+    
+    
+    .top__header2{
+        display: flex;
+        flex-direction: column;
+        margin-top: 20%;
+        width: 40%;
+        font-size: 1rem;
+        text-align: center;
+        }
+    
+        .hero__bottom {
+    
+        display: flex;
+        flex-direction: column;
+        font-size: 200%;
+        color: #212121;
+        height: 100%;
+        width: 100%;
+        }
+    
+        .bottom__header1{
+            display: flex;
+            flex-direction: column;
+            align-self: flex-end;
+            height: 20%;
+            width: 40%;
+            font-size: 1rem;
+            text-align: center;
+            display: inline-block;
+            }
+    
+    
+        .bottom__header2{
+            display: flex;
+            flex-direction: column;
+            width: 40%;
+            margin-top: 25%;
+            align-items: center;
+            font-size: 70%;
+            align-self: center;
+            color: #212121;
+            font-size: 0.5em;
+             text-align: center;
+        }
+    
+        .bottom__header2 h1 a{
+            text-decoration: none;
+            color: #212121;
+        }
+    
+        .bottom__header2 h1 a:hover{
+            color: #030303b2;
+            background: #7575758a; 
+        }
+    }
+
+    @media all and (min-width: 709px) and (max-width: 850px){
+        
+        .bottom__header2{
+            
+            margin-top: 10%;
+        }
+
+    }
+
+        @media all and (min-width: 0px) and (max-width: 708px) {
+
+            #hero {
+               flex-direction: column;
+                
+            }
+
+            .hero__header{
+                position: relative;
+            }
+           
+            
+            
+            .hero__top {
+                align-self: center;
+                display: flex;
+                flex-direction: column;
+                font-size: 150%;
+                color: #212121;
+                height: 100%;
+                width: 100%;
+                
+            }
+            
+            
+             
+             .top__header1{
+                display: flex;
+                font-size: 50%;
+                height: 20%;
+                width: 50%;
+                margin-top: 5%;
+                background-color: rgba(146, 99, 13, 0.568);
+               border-radius: 10%;
+                 text-align: center;
+                 display: inline-block;
+                
+            }
+            
+            
+            .top__header2{
+                display: flex;
+                flex-direction: column;
+                align-self: center;
+                margin-top: 5%;
+                width: 80%;
+                font-size: 70%;
+                display: inline-block;
+                text-align: center;
+                }
+            
+                .hero__bottom {
+            
+                display: flex;
+                flex-direction: column;
+                font-size: 200%;
+                color: #212121;
+                height: 100%;
+                width: 100%;
+                }
+            
+                .bottom__header1{
+                    display: flex;
+                    flex-direction: column;
+                    align-self: center;
+                    margin-top: 5%;
+                    height: 20%;
+                    width: 80%;
+                    font-size: 60%;
+                    }
+            
+            
+                .bottom__header2{
+                    display: flex;
+                    flex-direction: column;
+                    width: 80%;
+                    margin-top: 0%;
+                    align-items: center;
+                    align-self: center;
+                    color: #212121;
+                    font-size: 0.1rem;
+                }
+            
+                .bottom__header2 h1 a{
+                    text-decoration: none;
+                    color: #212121;
+                }
+            
+                .bottom__header2 h1 a:hover{
+                    color: #030303b2;
+                    background: #7575758a; 
+                } 
+
+        }
