--- a/css/variables.css
+++ b/css/variables.css
@@ -13,8 +13,12 @@ i{
     color: #757575;
 }
 
-div{
+.description{
     padding: 1rem;
+}
+
+div.p1, div.p2, div.p3, div.p4{
+    padding: 0;
 }
 
 .section__functionalities{
@@ -52,7 +56,7 @@ div{
 
 .photos div img{
     flex-shrink: 1;
-    justify-content: space-around;
+    justify-content: space-between;
     border-radius: 50%;
     width: 160px;
     height: 160px;
@@ -68,7 +72,7 @@ div{
 }
 
 .p1_paragraph, .p2_paragraph, .p3_paragraph, .p1_paragraph{
-    font-size: 20px;
+    font-size: 17px;
 }
 
 @media only screen and (max-width: 599px) {
