--- a/hero.css
+++ b/hero.css
@@ -16,22 +16,21 @@ body {
     justify-content: center;
     color: #FFFFFF;
     align-items: flex-start;
+
+    
+    background-image: url('las.jpg');
+    background-size: cover;
     
 }
 
 
 
-#hero img{
-    display: block;
-    max-width: 100%;
-    margin: 0 auto;
-    height: 0 auto;
-}
+
 
 
 
 .hero__header {
-    position: absolute;
+    /* position: absolute; */
     
 }
 
@@ -83,6 +82,7 @@ body {
     color: #212121;
     height: 100%;
     width: 100%;
+    
     }
 
     .bottom__header1{
@@ -103,6 +103,8 @@ body {
         display: flex;
         flex-direction: column;
         width: 40%;
+        background-color: rgba(146, 99, 13, 0.568);
+        border-radius: 10%;
         align-items: center;
         margin-top: 15%;
         font-size: 70%;
@@ -131,10 +133,10 @@ body {
 
  @media all and (min-width: 709px) and (max-width: 1310px){
 
-    .hero__header {
+    /* .hero__header {
         position: absolute;
         
-    }
+    } */
     
     
     .hero__top {
@@ -153,7 +155,7 @@ body {
         display: flex;
         font-size: 0,5em;
         height: 20%;
-        width: 33%;
+        width: 37%;
         background-color: rgba(146, 99, 13, 0.568);
        border-radius: 10%;
        display: inline-block;
@@ -230,11 +232,18 @@ body {
 
             #hero {
                flex-direction: column;
-                
+                align-items: center;
             }
 
+
+
             .hero__header{
-                position: relative;
+                background-color: rgba(146, 99, 13, 0.568);
+               border-radius: 10%;
+               width: 70%;
+               flex-wrap: wrap;
+               margin-top: 30px;
+               margin-bottom: 30px;
             }
            
             
@@ -243,10 +252,11 @@ body {
                 align-self: center;
                 display: flex;
                 flex-direction: column;
-                font-size: 150%;
+                font-size: 50%;
                 color: #212121;
                 height: 100%;
                 width: 100%;
+                margin-bottom: 0%;
                 
             }
             
@@ -254,14 +264,15 @@ body {
              
              .top__header1{
                 display: flex;
-                font-size: 50%;
+                font-size: 2em;
                 height: 20%;
-                width: 50%;
+                width: 80%;
                 margin-top: 5%;
-                background-color: rgba(146, 99, 13, 0.568);
-               border-radius: 10%;
                  text-align: center;
                  display: inline-block;
+                 margin-bottom: 0%;
+                 background-color: rgba(128, 255, 0, 0);
+                 
                 
             }
             
@@ -272,16 +283,17 @@ body {
                 align-self: center;
                 margin-top: 5%;
                 width: 80%;
-                font-size: 70%;
+                font-size: 1.5em;
                 display: inline-block;
                 text-align: center;
+                background-color: rgba(128, 255, 0, 0);
                 }
             
                 .hero__bottom {
             
                 display: flex;
                 flex-direction: column;
-                font-size: 200%;
+                font-size: 50%;
                 color: #212121;
                 height: 100%;
                 width: 100%;
@@ -294,7 +306,8 @@ body {
                     margin-top: 5%;
                     height: 20%;
                     width: 80%;
-                    font-size: 60%;
+                    font-size: 1.5em;
+                    background-color: rgba(128, 255, 0, 0);
                     }
             
             
@@ -306,7 +319,8 @@ body {
                     align-items: center;
                     align-self: center;
                     color: #212121;
-                    font-size: 0.1rem;
+                    font-size: 1.5em;
+                    background-color: rgba(128, 255, 0, 0);
                 }
             
                 .bottom__header2 h1 a{
