--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
     font-family: Arial, Helvetica, sans-serif;  
 }
 
+
 #contact-section {
     display: flex;
     flex-flow: column;
@@ -56,4 +57,149 @@ form {
 .contact-section_button:hover {
     background: #455A64;
     color: #FFFFFF; 
+}
+
+.navigation{
+    
+    margin: 0 auto; 
+    margin-top: 0;   
+    height: auto;
+    width: 100vw;
+    padding: 0px;
+    background:#607D8B;
+    display: flex;
+    flex-direction: row;
+    text-transform: uppercase;
+    text-align: center;
+    justify-content: space-evenly;
+    color: #FFEB3B;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    
+}
+
+.navigation ul li{
+    margin: 0.2em 0px;
+    list-style: none;
+}
+.navigation > .logo{
+    align-self: flex-start;
+    width: 5em;
+
+}
+.logo{
+    border: 3px black solid;
+    margin: auto 0;
+}
+
+.position {
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    padding-inline-start: 0px;
+    margin-left: 0;
+    margin-right: 0;
+}   
+a.nav{
+    text-decoration: none;
+    color:rgb(252, 243, 164);
+    text-transform: uppercase;
+    padding: 6px;
+ }
+a.nav:hover {
+    font-weight: bold;
+}
+.menu:hover{
+    background: black;
+    }
+@media screen and (min-width: 800px){
+    .navigation {
+        flex-direction: row;
+        justify-content: space-between; 
+}
+   .menu{
+        display: flex;
+}
+     a.nav {
+        color: black;
+        padding: 7px 10 px 6px;
+        margin: 7px;
+        flex-shrink: 1;
+}
+   .position{
+       display: flex;
+       align-items: center;
+       padding-right: 10px;       
+}    
+   .nav{
+       border-radius: 10px;
+       margin-right: 5px;
+       padding: 10px;
+       flex-shrink: 1;
+       background: #CFD8DC;
+   }
+   .logo{
+       display: block;
+       align-self: center;
+       justify-self: flex-start;
+       margin: 0;
+   }
+   a.nav:hover {
+        font-weight: lighter;
+        background: rgb(252, 243, 164);
+    }
+    .menu:hover {
+        background: none;
+}
+}
+
+#functionalities{
+   
+    margin-top: 96px;
+    background: #CFD8DC;
+}
+
+i{       
+    color: #757575;
+}
+
+div{
+    padding: 1rem;
+}
+
+.section__functionalities{
+    display: flex;
+    list-style-type: none;
+    justify-content: space-around;     
+    padding: 2rem;   
+    align-items: center; 
+}
+
+.ul__functionalities{
+    flex: 1 1 25%;
+    margin: 0;
+    color: #212121;  
+    
+    text-align: center;
+    align-items: center;
+}
+@media only screen and (max-width: 599px) {
+    .section__functionalities{
+        flex-direction: column;
+        text-align: center;
+    }
+}
+    #functionalities{   
+    margin-top: 80px;
+    background: #CFD8DC;
+}
+    li.ul__functionalities{
+    flex: 1 1 25%;
+    padding: 1rem;  
+    }
+@media screen and (min-width: 800px){
+    #functionalities{   
+        margin-top: 75px;
+}
 }
