--- a/css/variables.css
+++ b/css/variables.css
@@ -67,8 +67,7 @@ div.p1, div.p2, div.p3, div.p4{
 }
 
 .p1,.p2,.p3,.p4{
-    text-align: center;
-    
+    text-align: center;    
 }
 
 .p1_paragraph, .p2_paragraph, .p3_paragraph, .p4_paragraph{
@@ -85,7 +84,7 @@ div.p1, div.p2, div.p3, div.p4{
     li.ul__functionalities{
     flex: 1 1 25%;
     padding: 1rem;  
-}
+    }
 }
 
 @media only screen and (max-width: 800px){
@@ -104,7 +103,8 @@ div.p1, div.p2, div.p3, div.p4{
     }
     .p3{
         grid-area: p3;
-    }.p4{
+    }
+    .p4{
         grid-area: p4;
     }
 
