--- a/hero.css
+++ b/hero.css
@@ -1,116 +1,36 @@
-* {
-    box-sizing: border-box;  
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background: #CFD8DC;
-}
-
-
-#hero {
-    display: flex;
-    min-height: 270px;
-    justify-content: center;
-    color: #FFFFFF;
-    align-items: flex-start;
-
-    
-    background-image: url('las.jpg');
-    background-size: cover;
-    
-}
-
-
-
-
-
-
-
-.hero__header {
-    /* position: absolute; */
-    
-}
-
-
-.hero__top {
-    align-self: center;
-    display: flex;
-    flex-direction: column;
-    color: #212121;
-    font-size: 200%;
-    height: 100%;
-    width: 100%;
-}
-
-
- 
-.top__header1{
-    display: flex;
-    align-self: flex-start;
-    font-size: 100%;
-    height: 20%;
-    width: 50%;
-    margin-top: 10%;
-    background-color: rgba(146, 99, 13, 0.568);
-   border-radius: 10%;
-    text-align: center;
-    
-}
-
-
-
-
-
-.top__header2{
-    display: flex;
-    flex-direction: column;
-    width: 35%;
-    margin-top: 20%;
-    background-color: rgba(146, 99, 13, 0.568);
-    border-radius: 10%;
-    text-align: center;
+@media all and (min-width: 0px) and (max-width: 600px){
+    * {
+        box-sizing: border-box;  
     }
 
-    .hero__bottom {
-
+    #hero{
+    padding: 5%;
+    margin-top: 10em;
     display: flex;
-    flex-direction: column;
-    font-size: 200%;
-    color: #212121;
-    height: 100%;
-    width: 100%;
-    
+    background-color:#607D8B ;
+    border-radius: 10%;
+    width: 80% 
+}
+
+    .hero__top{
+        
+        flex-direction: column;
+        text-align: center;
+        margin-bottom: 5em;
+    }
+
+    .top__header1{
+        margin-bottom: 1em;
+    }
+
+    .hero__bottom{
+        
+        flex-direction: column;
+        text-align: center;
     }
 
     .bottom__header1{
-        display: flex;
-        flex-direction: column;
-        align-self: flex-end;
-        height: 20%;
-        width: 40%;
-        background-color: rgba(146, 99, 13, 0.568);
-        border-radius: 10%;
-        text-align: center;
-        }
-
-
-
-
-    .bottom__header2{
-        display: flex;
-        flex-direction: column;
-        width: 40%;
-        background-color: rgba(146, 99, 13, 0.568);
-        border-radius: 10%;
-        text-align: center;
-        align-items: center;
-        margin-top: 15%;
-        font-size: 70%;
-        align-self: center;
-        color: #212121;
+        margin-bottom: 1em;
     }
 
     .bottom__header2 h1 a{
@@ -120,216 +40,160 @@ body {
 
     .bottom__header2 h1 a:hover{
         color: #030303b2;
-        background: #7575758a; 
+        background: rgb(252, 243, 164); 
     }
 
 
+}
 
-    @media all and (min-width: 1311px) and (max-width: 1461px){
-        .bottom__header2{
-            
-            margin-top: 5%;
-        }
+@media all and (min-width: 601px) and (max-width: 900px){
+    * {
+        box-sizing: border-box;  
     }
 
- @media all and (min-width: 709px) and (max-width: 1310px){
+    #hero{
+    padding: 5%;
+    margin-top: 10em;
+    display: flex;
+    width: 80% 
+}
 
-    /* .hero__header {
-        position: absolute;
+    .hero__top{
         
-    } */
-    
-    
-    .hero__top {
-        align-self: center;
-        display: flex;
         flex-direction: column;
-        font-size: 150%;
-        color: #212121;
-        height: 100%;
-        width: 100%;
+        text-align: center;
+        margin-bottom: 5em;
     }
-    
-    
-     
+
     .top__header1{
-        display: flex;
-        font-size: 0,5em;
-        height: 20%;
-        /* width: 37%; */
-        background-color: rgba(146, 99, 13, 0.568);
-       border-radius: 10%;
-        text-align: center;
-        
+        padding: 5%;
+        width: 15rem;
+        border-radius: 10%;
+        margin-bottom: 1em;
+        background-color:#607D8B ;
     }
-    
-    
+
     .top__header2{
+        padding: 5%;
+        width: 20rem;
+        border-radius: 10%;
+        margin-bottom: 1em;
+        background-color:#607D8B ;
+    }
+
+    .hero__bottom{
         display: flex;
         flex-direction: column;
-        margin-top: 20%;
-        width: 40%;
-        font-size: 1rem;
         text-align: center;
-        }
+    }
+
+    .bottom__header1{
+        padding: 5%;
+        border-radius: 10%;
+        margin-bottom: 1em;
+        background-color:#607D8B ;
+    }
+
+    .bottom__header2{
+        padding: 5%;
+        border-radius: 10%;
+        background-color:#607D8B ;
+        
+    }
+
+    .bottom__header2 h1 a{
+        text-decoration: none;
+        color: #212121;
+    }
+
+    .bottom__header2 h1 a:hover{
+        color: #030303b2;
+        background: rgb(252, 243, 164); 
+    }
+
+
+}
+
+@media all and (min-width: 900px){
+    * {
+        box-sizing: border-box;  
+    }
+
+     #hero{
+    padding: 5%;
+    margin-top: 5em;
+    background-image: url('las.jpg');
+    background-size: cover;
+    }
+
     
-        .hero__bottom {
-    
+
+
+    .hero__header{
+        background-color: rgba(207, 216, 220, 0.856);
+        border-radius: 20%;
+        width: 60%;
+        
+    }
+
+    .hero__top{
         display: flex;
         flex-direction: column;
-        font-size: 200%;
-        color: #212121;
-        height: 100%;
-        width: 100%;
-        }
-    
-        .bottom__header1{
-            display: flex;
-            flex-direction: column;
-            align-self: flex-end;
-            height: 20%;
-            width: 40%;
-            font-size: 1rem;
-            text-align: center;
-           
-            }
-    
-    
-        .bottom__header2{
-            display: flex;
-            flex-direction: column;
-            width: 40%;
-            margin-top: 25%;
-            align-items: center;
-            font-size: 70%;
-            align-self: center;
-            color: #212121;
-            font-size: 0.5em;
-             text-align: center;
-        }
-    
-        .bottom__header2 h1 a{
-            text-decoration: none;
-            color: #212121;
-        }
-    
-        .bottom__header2 h1 a:hover{
-            color: #030303b2;
-            background: #7575758a; 
-        }
+        text-align: center;
+        margin-bottom: 2em;   
+
     }
 
-    @media all and (min-width: 709px) and (max-width: 850px){
+    
+
+    .top__header1{
+        padding: 5%;
+        font-size: 1em;
+        width: 20em;
+        border-radius: 10%;
+        margin-bottom: 1em;
+        text-align: center;
+    }
+
+    .top__header2{
         
-        .bottom__header2{
-            
-            margin-top: 10%;
-        }
-
+        
+        padding: 5%;
+        width: 20em;
+        border-radius: 10%;
+        margin-bottom: 1em;
+        
     }
 
-        @media all and (min-width: 0px) and (max-width: 708px) {
+    .hero__bottom{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
 
-            #hero {
-               flex-direction: column;
-                align-items: center;
-            }
+    .bottom__header1{
+        padding: 5%;
+        width: 30em;
+        border-radius: 10%;
+        margin-bottom: 1em;
+    }
 
+    .bottom__header2{
+        
+        padding: 5%;
+        width: 20em;
+        border-radius: 10%;
+    }
 
+    .bottom__header2 h1 a{
+        text-decoration: none;
+        color: #212121;
+    }
 
-            .hero__header{
-                background-color: rgba(146, 99, 13, 0.568);
-               border-radius: 10%;
-               /* width: 80%; */
-               flex-wrap: wrap;
-               margin-top: 30px;
-               margin-bottom: 30px;
-            }
-           
-            
-            
-            .hero__top {
-                align-self: center;
-                display: flex;
-                flex-direction: column;
-                font-size: 50%;
-                color: #212121;
-                height: 100%;
-                width: 100%;
-                margin-bottom: 0%;
-                
-            }
-            
-            
-             
-             .top__header1{
-                display: flex;
-                font-size: 2em;
-                height: 20%;
-                width: 100%;
-                margin-top: 5%;
-                 text-align: center;
-                 display: inline-block;
-                 margin-bottom: 0%;
-                 background-color: rgba(128, 255, 0, 0);
-                 
-                
-            }
-            
-            
-            .top__header2{
-                display: flex;
-                flex-direction: column;
-                align-self: center;
-                margin-top: 5%;
-                width: 90%;
-                font-size: 1.5em;
-                text-align: center;
-                background-color: rgba(128, 255, 0, 0);
-                }
-            
-                .hero__bottom {
-            
-                display: flex;
-                flex-direction: column;
-                font-size: 50%;
-                color: #212121;
-                height: 100%;
-                width: 100%;
-                }
-            
-                .bottom__header1{
-                    display: flex;
-                    flex-direction: column;
-                    align-self: center;
-                    margin-top: 5%;
-                    height: 20%;
-                    width: 90%;
-                    font-size: 1.5em;
-                    background-color: rgba(128, 255, 0, 0);
-                    }
-            
-            
-                .bottom__header2{
-                    display: flex;
-                    flex-direction: column;
-                    width: 100%;
-                    margin-top: 0%;
-                    align-items: center;
-                    align-self: center;
-                    color: #212121;
-                    font-size: 1.5em;
-                    background-color: rgba(128, 255, 0, 0);
-                }
-            
-                .bottom__header2 h1 a{
-                    text-decoration: none;
-                    color: #212121;
-                }
-            
-                .bottom__header2 h1 a:hover{
-                    color: #030303b2;
-                    background: #7575758a; 
-                } 
+    .bottom__header2 h1 a:hover{
+        color: #030303b2;
+        background: rgb(252, 243, 164); 
+        border-radius: 20%;
+    }
 
-        }
+}
