Small styling changes

--- a/hero.css
+++ b/hero.css
@@ -42,7 +42,7 @@
 
     .bottom__header2 h1 a{
         text-decoration: none;
-        color: #212121;
+        color: #FFEB3B;
     }
 
     .bottom__header2 h1 a:hover{
