--- a/css/main.css
+++ b/css/main.css
@@ -152,7 +152,8 @@ form {
     position: fixed;
     top: 0;
     left: 0;
-    right: 0; 
+    right: 0;
+    border-bottom: 2px solid #FFEB3B;
 }
 
 .navigation ul li{
