--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,11 @@ a.nav:hover {
     border-radius: 10px;
 }
 
+li.ul__functionalities{
+    flex: 1 1 25%;
+    padding: 1rem;  
+}
+
 .description{
     padding: 1rem;
 }
@@ -148,6 +153,8 @@ div.p1, div.p2, div.p3, div.p4{
 
 .section__functionalities{
     display: flex;
+    flex-direction: column;
+    text-align: center;
     list-style-type: none;
     justify-content: space-around;     
     padding: 2rem;   
@@ -226,7 +233,7 @@ div.p1, div.p2, div.p3, div.p4{
     margin-bottom: 2rem;
 }
 
-i.fa-5x {
+.section-extra_funcionality .fa-3x {
     color: var(--text-primary-color); /* Only in my section icons have class fa-5x */
 }
 
@@ -295,14 +302,15 @@ form {
 }
 
 .photos{
-    display: flex; 
+    display: grid;
+    grid-template-areas:
+        "p1 p2"
+        "p3 p4";
     background: var(--light-primary-color);
     border-bottom: 2px solid var(--accent-color);
 }
 
 .photos div img{
-    flex-shrink: 1;
-    justify-content: space-between;
     border-radius: 50%;
     width: 160px;
     height: 160px;
@@ -311,6 +319,22 @@ form {
 
 .photos img{
     width: 100%;   
+}
+
+.p1{
+    grid-area: p1;
+}
+
+.p2{
+    grid-area: p2;
+}
+
+.p3{
+    grid-area: p3;
+}
+
+.p4{
+    grid-area: p4;
 }
 
 .p1,.p2,.p3,.p4{
@@ -334,9 +358,14 @@ footer {
 }
 
 @media screen and (min-width: 600px){
+
     .hero__header{
         border-radius: 2rem;
         width: 80%;
+    }
+
+    .section__functionalities{
+        flex-direction: row;
     }
 
     .section-extra {
@@ -350,6 +379,7 @@ footer {
             ". func7 func7 func7 ."
             ".   .   .   .   .";
     }
+
 }
 
 @media screen and (min-width: 800px){
@@ -407,47 +437,18 @@ footer {
         grid-template-columns: 4rem 1fr 2rem 1fr 4rem;
     }
 
+    .photos {
+        display: flex;
+    }
+
 }
 
-@media screen and (min-width: 999px){
+@media screen and (min-width: 1000px){
+
     .section-extra {
         grid-template-columns: 9rem 1fr 5rem 1fr 9rem;
     }
-}
-
-@media only screen and (max-width: 599px) {
-    .section__functionalities{
-        flex-direction: column;
-        text-align: center;
-    }
-}
-    #functionalities{   
-    background: var(--light-primary-color);
-}
-    li.ul__functionalities{
-    flex: 1 1 25%;
-    padding: 1rem;  
-}
-
-@media only screen and (max-width: 800px){
-    .photos{
-        display: grid;
-        grid-template-areas:
-        "p1 p2"
-        "p3 p4";
-    }
-
-    .p1{
-        grid-area: p1;
-    }
-    .p2{
-        grid-area: p2;
-    }
-    .p3{
-        grid-area: p3;
-    }
-    .p4{
-        grid-area: p4;
-    }
 
 }
+
+
