--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ a.nav:hover {
     background-position: center;
     background-repeat: no-repeat;
     color: var(--text-primary-color);
-    align-items: center;
+    align-items: flex-end;
     margin-top: 80px;
     border-top: 2px solid var(--accent-color);    
 }
@@ -411,7 +411,7 @@ footer {
        margin-right: 5px;
        padding: 10px;
        flex-shrink: 1;
-       /* background: var(--light-primary-color); */
+       
    }
    .logo{
        display: block;
@@ -422,7 +422,7 @@ footer {
 
     a.nav:hover {
         font-weight: lighter;
-        color: var(--accent-color);
+       color: var(--accent-color);
     }
 
     .menu:hover {
